test/compile_errors/err_struct_lit_many_errors.w
//! expect-check-fail: unknown type 'Foo'
fn main:
    let g = Foo { 1 2 3 4 5 6 7 8 9 10 }
